--- a/composer.json
+++ b/composer.json
@@ -1,13 +1,14 @@
 {
   "require": {
-    "php": "^8.1"
+    "php": "^8.1",
+    "phpspec/prophecy": "^1.17"
   },
   "require-dev": {
     "phpunit/phpunit": "^9.5"
   },
   "autoload": {
     "psr-4": {
-      "HarryPotta\\": "src/"
+      "App\\": "src/"
     }
   }
 }
